# gpt4-cli

./: Cargo.toml  README.md
src/: lib.rs  main.rs
