[package]
name = "gpt4"
version = "0.1.1"
edition = "2021"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]
license = "MIT"
documentation = "https://github.com/jonaylor89/gpt4-cli"
readme = "README.md"
repository = "https://github.com/jonaylor89/gpt4-cli"
homepage = "https://github.com/jonaylor89/gpt4-cli"
description = "a cli to interact with the openai gpt4 api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.79"
config = "0.13.4"
dirs = "5.0.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
termimad = "0.26.1"
tokio = { version = "1.35.1", features = ["full"] }

[[bin]]
name = "gpt4"
test = false
bench = false
